<!--
  ~ Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<resources>
    <string name="app_name">Minimal Demo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="demo_url"></string>
    <string name="demo_region">us-east-1</string>
    <string name="meeting_leave">Leave Meeting</string>

    <!-- video -->
    <string name="video_view">Video Collection</string>
    <string name="no_screen_share_available">No screen share available</string>
    <string name="no_videos_available">No videos available</string>
    <string name="next_video_page">Next Page &gt;&gt;</string>
    <string name="prev_video_page">&lt;&lt; Prev Page</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="video_filters">Video Filters</string>
    <string name="poor_connection_message">Poor local connection. \nVideo will resume \nwhen your connection improves.</string>

    <!-- toggle tab -->
    <string name="speaker_button">Toggle Speaker</string>
    <string name="toggle_camera">Toggle Camera</string>
    <string name="toggle_additional_options_menu">Toggle Additional Options Menu</string>
    <string name="toggle_mute">Toggle Mute</string>

    <string name="meeting_title">Meeting Demo</string>
    <string name="meeting_description">To create or join a meeting, please enter meeting ID and your name</string>
    <string name="meeting_id">Meeting ID</string>
    <string name="your_name">Your name</string>
    <string name="join">Join</string>

    <string name="volume_indicator">Volume Indicator</string>
    <string name="active_speaker_indicator">Active Speaker Indicator</string>

    <!-- Notify users for errors -->
    <string name="user_notification_meeting_id_invalid">Meeting ID is invalid</string>
    <string name="user_notification_attendee_name_invalid">Attendee name is invalid</string>
    <string name="user_notification_permission_error">Meetings cannot start without permissions</string>
    <string name="user_notification_meeting_url_error">Your url is invalid</string>
    <string name="user_notification_meeting_start_error">There was an error starting the meeting. Please try again</string>

    <string name="title_activity_meeting">MeetingActivity</string>
</resources>