<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meeting_input_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/meeting_title"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/meeting_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="132dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/meeting_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/meeting_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/meeting_description"
            android:text="@string/meeting_description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/meeting_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/meeting_id"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/meeting_id_input"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="0.7"
                android:backgroundTint="#C6C6C8"
                android:editable="true"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHighlight="#007AFF "
                android:textColorLink="#007AFF "
                android:textCursorDrawable="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/attendee_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/your_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/attendee_name_input"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="0.7"
                android:backgroundTint="#C6C6C8 "
                android:editable="true"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHighlight="#007AFF "
                android:textColorHint="@color/black"
                android:textColorLink="#007AFF "
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <TextView
            android:id="@+id/join_button"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:contentDescription="@string/join"
            android:text="@string/join"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="25sp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>