<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/roster_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/buttonMute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/toggle_mute"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/button_mute"
            app:tint="?android:attr/textColorPrimary" />

        <ImageButton
            android:id="@+id/buttonCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/toggle_camera"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/button_camera"
            app:tint="?android:attr/textColorPrimary" />

        <ImageButton
            android:id="@+id/buttonLeave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/meeting_leave"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/button_end"
            app:tint="#F44336" />

    </LinearLayout>
</LinearLayout>